fix z-index issue with filter bar

--- a/frontend/src/components/pages/page-search/page-search.scss
+++ b/frontend/src/components/pages/page-search/page-search.scss
@@ -40,6 +40,7 @@ $state-height-desktop: calc(100vh - (#{$search-filters-desktop-height} + #{$head
         width: 100%;
         box-shadow: inset 0 -1px 0 0 #e5e5e5, inset 0 1px 0 0 #e5e5e5;
         overflow: hidden;
+        z-index: 2;
 
         button.view-nav {
           background: transparent;
